// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parserES5ForOfStatement2.ts - typescript-verify 1`] = `
//@target: ES5
for (var of X) {
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
//@target: ES5
for (var of X) {
}

`;

exports[`parserES5ForOfStatement21.ts - typescript-verify 1`] = `
//@target: ES5
for (var of of) { }
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
//@target: ES5
for (var of of) {
}

`;

exports[`parserForInStatement2.ts - typescript-verify 1`] = `
for (var in X) {
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
for (var in X) {
}

`;
